app/assets/stylesheets/header.scss
.Header {
  background: rgba(0,0,0,0.3);
  position: fixed;
  height: 4rem;
  width: 100%;
  top: 0;
}

.Header-logo {
  margin-top: 0.8125rem;
}

.HeaderMenu {
  list-style: none;
  display: none;
}

.HeaderMenu-item {
  display: inline-block;
}

.HeaderMenu-itemLink {
  color: #7C7E7D;
  text-decoration: none;
}

@media screen and (min-width: 40em) {
  .Header {
    background: white;
  }

  .HeaderMenu {
    display: initial;
  }

  .HeaderMenu-itemLink {
    padding: 1.15rem 0;
    margin: 0 0.9375rem;
    display: block;
    &.HeaderMenu--active {
      border-bottom: 3px solid #BD201F;
    }
  }
}

